@@ -1,0 +1,11 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope"
+    i18n_domain="eea">
+
+  <adapter
+    provides=".userdataschema.IEnhancedUserDataSchema"
+    for="Products.CMFCore.interfaces.ISiteRoot"
+    factory=".adapter.EnhancedUserDataPanelAdapter"
+    />
+
+</configure>
