@@ -1,4 +1,4 @@
 <?xml version="1.0"?>
 <metadata>
-  <version>1.6</version>
+  <version>2.4</version>
 </metadata>
