@@ -1,0 +1,12 @@
+<?xml version="1.0"?>
+<object name="portal_properties" meta_type="Plone Properties Tool">
+ <object name="site_properties" meta_type="Plone Property Sheet">
+  <!-- Fields that will be added to the form after installation of the product
+  -->
+  <property name="user_registration_fields" type="lines" purge="False">
+   <element value="thematic_domain" />
+   <element value="institutional_domain" />
+   <element value="disclaimer" />
+  </property>
+ </object>
+</object>
