@@ -1,0 +1,10 @@
+<?xml version="1.0"?>
+<componentregistry>
+  <utilities>
+    <utility
+      interface="plone.app.users.userdataschema.IUserDataSchemaProvider"
+      factory="land.copernicus.content.userdataschema.UserDataSchemaProvider"
+    />
+  </utilities>
+</componentregistry>
+
