@@ -1,0 +1,5 @@
+<?xml version="1.0"?>
+<object name="portal_memberdata" meta_type="Plone Memberdata Tool">
+ <property name="thematic_domain" type="string"></property>
+ <property name="institutional_domain" type="string"></property>
+</object>
