@@ -3,6 +3,12 @@ Changelog
 
 2.4.dev0 - (unreleased)
 -----------------------
+* Upgrade step: (manual) Enable user registration in @@security-controlpanel. Tick
+  Enable self-registration, Let users select their own passwords and Use email address as login name
+* Upgrade step: Within "Plone > Site setup > Add-ons" click on
+  upgrade button available for land.copernicus.content
+* Feature: Added thematic_domain and institutional_domain extra properties to users
+  [olimpiurob refs #24190]
 * Feature: Added Copernicus Publication Workflow
   [olimpiurob refs #24190]
 
